Implement ls -m, ls -d, ls -t and update DG